[tool.poetry]
name = "roc-auc simulation"
version = "0.1.0"
description = ""
authors = ["Martin Bernstorff <martinbernstorff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
